objects/LAT_FormLine__c.object
<CustomObject>
    <fields>
        <fullName>LAT_FL_Code__c</fullName>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_FL_Country__c</fullName>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_FL_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_FL_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_FL_FormHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FormHeader</label>
        <referenceTo>LAT_FormHeader__c</referenceTo>
        <relationshipLabel>FormsLines</relationshipLabel>
        <relationshipName>FormsLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_FL_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FormLine</label>
    <nameField>
        <displayFormat>FL-{0000}</displayFormat>
        <label>FormLine Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FormsLines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>